--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@heroui/react": "^2.7.8",
     "@heroui/system": "^2.4.15",
     "@heroui/theme": "^2.4.15",
     "@tailwindcss/vite": "^4.1.6",
@@ -26,18 +25,15 @@
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "framer-motion": "^12.0.0",
+    "js-cookie": "^3.0.5",
     "motion": "^12.0.0",
     "react": "^18.3.1",
-    "react-cookie": "^7.2.2",
-    "react-cookies": "^0.1.1",
     "react-dom": "^18.3.1",
-    "react-google-fonts": "^1.2.1",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.6",
-    "universal-cookie": "^7.2.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
